Updating to java21 with copilot app modernization - removing deprecated